# multi-agent-system-mcp

./: .gitignore  custom_weather_mcp_server.py  frontend.py  main.py  mcp_client.py  requirements.txt  testing_all_tools.py  testing_aviationstack_mcp.py  testing_hotel_agent.py  testing_weather_mcp_server.py
aviationstack-mcp/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
aviationstack-mcp/.github/: PULL_REQUEST_TEMPLATE.md
aviationstack-mcp/.github/workflows/: pylint.yml  release-publish.yml  tests.yml
aviationstack-mcp/.well-known/mcp/: server-card.json
aviationstack-mcp/src/aviationstack_mcp/: __init__.py  __main__.py  server.py
aviationstack-mcp/tests/: test_server.py
travel_plans/: travel_plan_20260709_190611.md  travel_plan_20260711_191803.md  travel_plan_20260711_192123.md  travel_plan_20260711_192143.md  travel_plan_20260711_192324.md  travel_plan_20260711_192339.md  travel_plan_20260711_193600.md  travel_plan_20260711_195241.md  travel_plan_20260711_200542.md  travel_plan_20260711_215835.md  travel_plan_20260711_222107.md  travel_plan_20260711_223400.md  travel_plan_20260711_223440.md  travel_plan_20260711_223456.md  travel_plan_20260711_224524.md  travel_plan_20260711_225820.md  travel_plan_20260711_231025.md  travel_plan_20260711_231648.md  travel_plan_20260712_092349.md  travel_plan_20260712_092421.md  voyage_ai_20260711_201759.md  voyage_ai_20260711_201853.md  voyage_ai_20260711_201916.md  voyage_ai_20260711_201956.md  voyage_ai_20260711_202059.md  voyage_ai_20260711_202100.md  voyage_ai_20260711_202102.md  (+2 more)
